--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -6,7 +6,7 @@
   position: absolute;
   top: 47px;
   left: 200px;
-  right: 200px;
+  right: 10px;
   height: 35px;
   min-width: 650px;
   white-space: nowrap;
